--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,7 @@ projects:
       - leftslideshow
       - brackets-mudim
       - cdn
+      - kobo-tieng-viet
 
 # social_media:
   # behance: your_username
